fix: style_page1.css

--- a/CSS/style_page1.css
+++ b/CSS/style_page1.css
@@ -1,13 +1,12 @@
 *{   
-    margin: 0rem 0rem 0rem;
+    margin: 0;
     padding: 0;
-
-    
-    flex: 1;
+    box-sizing: border-box;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 main{
-    flex: 1; /*força as caixas se ajustarem ao main */
     width: 800px;
     height: 478px;
     color: black;
@@ -15,11 +14,6 @@ main{
 }
 
 body{
-    width: 1440px;
-    height: 1867px;
-    max-width: 1440vh;
-    max-height: 1440vh;
-    flex: 1;
     margin:0;
     border: none;
     display: flex;
@@ -29,22 +23,17 @@ body{
 header{
     width: 1440px;
     height: 604px;
-    
     max-height: 50%;
     max-width: 100%;
     border: none;
     padding:0rem 33rem 15rem;
-    background: url(/renan-lemes.github.io/Images/contato-background.jpg) no-repeat;
-    
+    background: url(../Images/contato-background.jpg) no-repeat;
     background-position: 0;
 }
-
-
 
 .Home{
     width: 10.2vh;
     height: 5.2vh;
-   
     font: 200 -2rem/1 'Nunito', sans-seri;
     margin: 2rem 1rem -3rem;
     float: 1;
@@ -82,9 +71,7 @@ header{
 .Projetos{
     width: 10.2vh;
     height: 5.2vh;
-
     font: 200 -2rem/1 'Nunito', sans-seri;
-
     margin: 2rem 1rem -3rem;
     border-radius: 2rem;
     background-color: #5DD3F9;
@@ -94,23 +81,17 @@ header{
 
 .Projetos:hover{
     background-color: #5dd2f9af;
-
     padding: 0rem 1rem 0.3rem;
 }
 
 img{
     width: 163px;
     height: 164px;
-
-    
-    
     position:absolute;
-
     display: grid;
     margin: 6rem -12rem;
     border-radius: 50%;
     border-style:groove;
-    
     border: white;
 }
 
@@ -123,7 +104,6 @@ h1{
 
 h2{
     align-items: center;
-
     font: 500 2rem/1 'Nunito', sans-seri;;
     display: flex;
     margin: 2rem 15rem;
@@ -132,9 +112,7 @@ h2{
 h3{
     width: 440px;
     height: 40px;
-
     font: 400 1rem/4 'Nunito', sans-seri;
-    
     align-items:center;
     margin: 1rem  -1rem;
     display:flex;
@@ -142,9 +120,7 @@ h3{
 
 .texto-pre{
     display: flex;
-
     font: 400 2vw 'Nunito', sans-seri;
-
     padding:15rem 15rem 15rem;
     align-items: center;
     margin: 0rem 25rem -2rem;
@@ -154,21 +130,16 @@ h3{
 .Prefacio{
     width: 1440px;
     height: 640px;
-
-
     max-width: 1440px;
     max-height: 640px;
-    
     display: flex;
     padding: 3rem 40rem;
-    background: url(/renan-lemes.github.io/Images/depoimentos-background-2.png) no-repeat;
+    background: url(../Images/depoimentos-background-2.png) no-repeat;
 }
 
 .Projeto{
     display: flex;
-
     font: 400 2vw 'Nunito', sans-seri;
-
     padding:15rem 15rem 15rem;
     align-items: center;
     margin: -30rem 25rem 20rem;
@@ -178,21 +149,16 @@ h3{
 .retangulo1{
     height: 230px;
     width: 158px;
-
     border-radius: 2rem;
-    
     background-color: #00969A;
     display: flex;
-    
     margin: -20rem 30rem -74rem;
 }
 
 .retangulo2{
     height: 230px;
     width: 158px;
-
     border-radius: 2rem;
-
     background-color: #1F6097;
     display: flex;
     margin: 60rem 60rem -23rem;
@@ -201,9 +167,7 @@ h3{
 .retangulo3{
     height: 230px;
     width: 158px;
-
     border-radius: 2rem;
-
     background-color: #007999;
     display: flex;
     margin: 8rem 45rem -10rem;
@@ -212,11 +176,8 @@ h3{
 .retangulo4{
     height: 230px;
     width: 158px;
-
     border-radius: 2rem;
-
     background-color:#0D0077;
-
     display: flex;
     margin: -14rem 75rem 0rem;
 }
@@ -224,18 +185,15 @@ h3{
 .Contatos{
     width: 88px;
     height: 35px;
-
     font: 400 2vw 'Nunito', sans-seri;
     display: flex;
     margin: 10rem 38rem 15rem;
-
 }
 
 
 button.Email{
     width: 190px;
     height: 66.83px;
-
     display: flex;
     background-color: #2b342f73;
     border-radius: 1.5rem;
@@ -250,7 +208,6 @@ img.imgEmail{
     width: 60px; 
     height: 50px;
     display: flex;
-
     max-width: 60px;
     max-height: 50px;
     margin: -0.1rem -3.9rem -6rem; 
@@ -260,13 +217,11 @@ img.imgEmail{
 
 .Email:hover{
     background-color: #2b342f93;
-
 }
 
 button.Insta{
     width: 190px;
     height: 66.83px;
-
     display: flex;
     background-color: #dc3ccca4;
     border-radius: 1.5rem;
@@ -281,10 +236,8 @@ img.ImgInsta{
     width: 60px;
     height: 50px;
     display: flex;
-
     max-width: 60px;
     max-height: 50px;
-
     margin: -0.1rem -3.9rem -6rem; 
     border-radius: 1.1rem;
     border: none;
@@ -297,7 +250,6 @@ img.ImgInsta{
 button.Linkedin{
     width: 190px;
     height: 66.83px;
-
     display: flex;
     background-color: #3c8fdca4;
     border-radius: 1.5rem;
@@ -312,10 +264,8 @@ img.imgLink{
     width: 60px;
     height: 50px;
     display: flex;
-
     max-width: 60px;
     max-height: 50px;
-
     margin: -0.1rem -3.9rem -6rem; 
     border-radius: 1.1rem;
     border: none;
