STYLE:Adicionando os botões iniciais

--- a/CSS/style_page1.css
+++ b/CSS/style_page1.css
@@ -2,18 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 100vw; /*100vw*/
+    max-height: 100vh; /*100vh*/
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 main{
-    width: 1440vw;
-    height: 604vw;
+    /*width: 1440vw;*/
+    /*height: 604vw;*/
     color: black;
     border: none;
 }
 
 body{
+    max-width: 1062px;
+    max-height: 1867px;
     margin:0;
     border: none;
     display: flex;
