--- a/CSS/style_page1.css
+++ b/CSS/style_page1.css
@@ -1,11 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    max-width: 100vw;
-    /*100vw*/
-    max-height: 100vh;
-    /*100vh*/
 }
 
 html {
@@ -13,32 +10,42 @@ html {
 }
 
 main {
-    /*width: 1440vw;*/
-    /*height: 604vw;*/
-    color: black;
+
+    /* color: black; */
     border: none;
 }
 
 body {
-    max-width: 66.375rem;
-    max-height: 116.688rem;
-    margin: 0;
-    border: none;
+
     display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
     background-color: #fff;
 }
 
 header {
-    width: 90rem;
-    /*1440px*/
-    height: 40rem;
-    /*604px*/
+    /* width: 90rem; */
+    width: 1300px;
+    /* height: 40rem; */
+    height: 610px;
     max-width: 90rem;
-    max-height: 40rem;
+    max-height: 50rem;
     padding: 0rem 30rem 15rem;
-    background: url(../Images/Novo_teste_Header.png) no-repeat;
+
     background-position: 0;
     object-fit: inherit;
+}
+
+.img_back {
+    width: 100%;
+    height: 100%;
+    max-width: 90rem;
+    max-height: 75rem;
+    border-radius: 0rem;
+    padding: 0;
+    opacity: 1;
+    margin: -15rem -30rem 0;
 }
 
 img {
@@ -46,7 +53,7 @@ img {
     height: 14rem;
     position: absolute;
     display: grid;
-    margin: 6rem -15rem;
+    margin: 2rem -16rem;
     border-radius: 50%;
     border-style: groove;
     border: white;
