--- a/CSS/Button.css
+++ b/CSS/Button.css
@@ -1,3 +1,8 @@
+.container-button {
+    align-items: center;
+    padding: 0rem;
+}
+
 .Home {
     width: 5.75rem;
     height: 2.6rem;
@@ -10,8 +15,8 @@
 }
 
 .Home:hover {
-    background-color: #713cdcea;
-    /*padding: 0rem 1rem 0.3rem;*/
+    background-color: rgba(138, 106, 204, 0.918)
+        /*padding: 0rem 1rem 0.3rem;*/
 }
 
 .Home:active {
@@ -24,7 +29,7 @@
     width: 5.75rem;
     height: 2.6rem;
     font: 200 -2rem/1 'Nunito', sans-seri;
-    margin: -15rem 2rem 0rem;
+
     border-radius: 2rem;
     background-color: #4196E3;
     border: 0;
@@ -32,7 +37,7 @@
 }
 
 .Contato:hover {
-    background-color: #4195e3d8;
+    background-color: #71b9fc;
 }
 
 .Contato:active {
@@ -45,15 +50,15 @@
     width: 5.75rem;
     height: 2.6rem;
     font: 200 -2rem/1 'Nunito', sans-seri;
-    margin: -10rem 0rem 0rem;
+
     border-radius: 2rem;
-    background-color: #5DD3F9;
+    background-color: #eff3cda9;
     border: 0;
     cursor: pointer;
 }
 
 .Projetos:hover {
-    background-color: #5dd2f9af;
+    background-color: #EFF3CD;
 }
 
 .Projetos:active {
@@ -67,7 +72,7 @@
     height: 14.375rem;
     width: 9.875rem;
     border-radius: 2rem;
-    background-color: #00969A;
+    background-color: #68B2F8;
     display: flex;
     margin: -14rem 22rem 0rem;
     border: 0;
@@ -86,12 +91,12 @@
 .Projeto1 {
     height: 0.938rem;
     font: 300 3vh 'Nunito', sans-seri;
-    color: #fff;
+    color: #000;
     margin: 150px 2px 25rem;
 }
 
 .retangulo1:hover {
-    background-color: #098c91;
+    background-color: #9ec6ec;
     margin: -14rem 21rem 0rem;
     /* Vou pensar se fica essa ideia mesmo*/
 }
@@ -106,7 +111,7 @@
     height: 14.375rem;
     width: 9.875rem;
     border-radius: 2rem;
-    background-color: #1F6097;
+    background-color: #61ADA0;
     display: flex;
     margin: -14.4rem 35rem 0rem;
     border: 0;
@@ -115,7 +120,7 @@
 .Projeto2 {
     height: 0.938rem;
     font: 300 3vh 'Nunito', sans-seri;
-    color: #fff;
+    color: #000;
     margin: 150px 20px 30rem;
 }
 
@@ -134,7 +139,7 @@
 }
 
 .retangulo2:hover {
-    background-color: #2571b3;
+    background-color: #7ddaca;
     margin: -14.4rem 36rem 0rem;
     /* Vou pensar se fica essa ideia mesmo*/
 }
@@ -149,7 +154,7 @@
     height: 14.375rem;
     width: 9.875rem;
     border-radius: 2rem;
-    background-color: #007999;
+    background-color: #7037CD;
     display: flex;
     margin: -14.55rem 52rem 0rem;
     border: 0;
@@ -158,7 +163,7 @@
 .Projeto3 {
     height: 0.938rem;
     font: 300 3vh 'Nunito', sans-seri;
-    color: #fff;
+    color: #000;
     margin: 115px 15px 10rem;
 }
 
@@ -172,7 +177,7 @@
 }
 
 .retangulo3:hover {
-    background-color: #016783;
+    background-color: #8b65c9;
     margin: -14.55rem 51rem 0rem;
 }
 
@@ -186,7 +191,7 @@
     height: 14.375rem;
     width: 9.875rem;
     border-radius: 2rem;
-    background-color: #0D0077;
+    background-color: #EFF3CD;
     display: flex;
     margin: -14.44rem 65rem 0rem;
     border: 0;
@@ -195,7 +200,7 @@
 .Projeto4 {
     height: 0.938rem;
     font: 300 3vh 'Nunito', sans-seri;
-    color: #fff;
+    color: #000;
     margin: 130px 25px 10rem;
 }
 
@@ -209,7 +214,7 @@
 }
 
 .retangulo4:hover {
-    background-color: #160596;
+    background-color: #eff3cdb2;
     margin: -14.44rem 66rem 0rem;
 }
 
@@ -223,7 +228,7 @@ button.Git {
     width: 11.875rem;
     height: 4.177rem;
     display: flex;
-    background-color: #2b342f73;
+    background-color: #EFF3CD;
     border-radius: 1.5rem;
     margin: -5rem 26rem 16rem;
     border: none;
@@ -244,7 +249,7 @@ img.imgGit {
 }
 
 .Git:hover {
-    background-color: #2b342f93;
+    background-color: #a6a88e;
 }
 
 .Git:active {
@@ -308,6 +313,7 @@ img.imgLink {
     max-width: 3.75rem;
     max-height: 3.125rem;
     margin: -0.1rem -3.9rem -6rem;
+
     border-radius: 1.1rem;
     border: none;
 }
