--- a/CSS/style_page1.css
+++ b/CSS/style_page1.css
@@ -156,11 +156,46 @@ h4 {
 }
 
 .img_c {
-    height: 3rem;
-    width: 3rem;
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
 }
 
+.img_cc {
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
+}
 
+.img_python {
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
+} 
+
+.img_sql {
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
+}
+
+.img_html {
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
+}
+
+.img_css {
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
+}
+
+.img_js {
+    height: 3.5rem;
+    width: 3.5rem;
+    margin: auto;
+}
 
 .Projeto {
     display: flex;
