--- a/CSS/style_page1.css
+++ b/CSS/style_page1.css
@@ -36,6 +36,20 @@ header {
     object-fit: inherit;
 }
 
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px; /* A altura só é vista quando a rolagem é horizontal */
+  }
+  
+::-webkit-scrollbar-track {
+    background: transparent;
+    padding: 2px;
+  }
+  
+::-webkit-scrollbar-thumb {
+    background-color: #000;
+}
+
 .img_back {
     width: 100%;
     height: 100%;
